--- a/Project.toml
+++ b/Project.toml
@@ -4,7 +4,9 @@ authors = ["Thomas Poulsen"]
 version = "0.1.0"
 
 [deps]
+DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
+XLSX = "fdbf4ff8-1666-58a4-91e7-1b58723a45e0"
 
 [compat]
 julia = "1.5.3"
