--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -1,3 +1,4 @@
 [deps]
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
 MTP = "952b76c5-a10f-4aa4-b3a1-9a1f1ece7e60"
+XLSX = "fdbf4ff8-1666-58a4-91e7-1b58723a45e0"
